# physics-rubrics

./: AG_ProjectPlan.md  INSTALLATION_GUIDE.md  LICENSE  PROJECT_PLAN.md  ProductNameOptions.md  README.md  claude.md  extract_pdf.py
.claude/: settings.local.json
.claude/agents/: pdf-markdown-converter.md
AG_JIRAs/: CC-000-PROJECT-OVERVIEW.md  CC-EPIC-001-Data-Preparation.md  CC-EPIC-002-AI-Model-Development.md  README.md
AG_JIRAs/Epic-1-Data-Preparation/: CC-001-Setup-Infrastructure.md  CC-003-Extract-Energy-Standards.md  CC-004-Extract-Forces-Motion-Standards.md  CC-005-Extract-Waves-Standards.md  CC-006-Extract-Space-Matter-Standards.md  CC-009-Extract-PLDs.md  CC-010-Knowledge-Base-Schema.md
AG_JIRAs/Epic-2-AI-Development/: CC-013-Evaluate-LLM.md  CC-014-Setup-Google-AI.md  (+10 more)
PoC/: context_loader.py  cost_analysis.md  generator.py  main.py
Sample Clusters/: sample-physics-clusters-2025.md
TechRefDocs/: Reduce-TokenCosts.md  Reducing Token Costs.extracted.txt  Reducing Token Costs.json  You_Do_Not_Need_RAG.extracted.txt  extract_text.py
clustercraft/: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
clustercraft/clustercraft/: __init__.py  cli.py  llm.py  orchestrator.py  search.py  utils.py  validator.py
clustercraft/clustercraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clustercraft/config/: settings.yaml
clustercraft/output/: cluster_hs-ps-2-1_20251124_193515.md
clustercraft/stimuli/: example_stimulus.md
clustercraft/templates/: README.md  cluster_prompt.j2  system_instruction.md
clustercraft/tests/: __init__.py  run_tests.py  test_llm.py  test_search.py  test_utils.py  test_validator.py
(+56 files in other folders)
